Revision history for Perl extension App::Info.

0.50

0.49  2006-04-08T05:35:31
      - Fixed typos in App::Info::HTTPD::Apache.
      - Changed keys for Apache executables such as apxs from, e.g., "apache
        apxs" to "path to apxs".
      - Added the value returned by Apache2::BuildConfig->new->{APXS_BINDIR},
        if Apache2::Build config is installed, to the list of bin directories
        returned by search_bin_dirs() in App::Info::HTTPD::Apache.
      - Added "httpd2" to the list of names returned by search_exe_names() in
        App::Info::HTTPD::Apache.
      - Fixed tests in t/apache_info.t to pass on Windows.

0.48  2006-02-05T03:09:38
      - Added support for Apache2 to App::Info::HTTPD::Apache.
      - Added files_in_dir() method to App::Info::Util to get a list of all of
        the files in a directory.
      - Added shared_mods() method to App::Info::HTTPD::Apache for getting a
        list of shared object libraries compiled for Apache.
      - The mod_perl() method of App::Info::HTTPD::Apache now also checks the
        shared object libraries to determine whether mod_perl is supported by
        the installed Apache.
      - Corrected some documentation pastos in App::Info::Lib::OSSPUUID.
      - Added perl_module() method to App::Info::Lib::OSSPUUID, since the OSSP
        library might be installed, but not OSSP::uuid.

0.47  2005-12-05T22:56:12
      - Fixed "use lib" line in Makefile.PL caused by a bug in Module::Build.

0.46  2005-12-05T22:43:20
      - Added App::Info::Lib::OSSPUUID for information about the OSSP
        UUID library.

0.45  2005-11-08T05:57:05
      - Added "key" attribute to handler request objects.
      - Changed the handler key names for each subclass to more command-line
        friendly versions, such as "path to httpd" instead of just
        "executable". Just `tr/ /-/` to make them into command-line options.

0.44  2005-01-08T00:29:03